--- a/src/components/Editor.css
+++ b/src/components/Editor.css
@@ -2,12 +2,29 @@
 
 .editor-container {
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
     height: 100%;
-    width: 80%;
+    width: 90%;
     background-color: #f5f5f5;
     margin: 0;
+  }
+
+  .header {
+    display: flex;
+    align-items: center;
+    margin-bottom: 10px;
+  }
+
+  .entry-datetime {
+    font-size: 0.8rem;
+    color: #888; /* Subtle color */
+    margin-right: 10px;
+  }
+
+  .emoji-display {
+    font-size: 2rem;
   }
 
   .editor-textarea {
@@ -19,16 +36,11 @@
     line-height: 1.6;
     background: none;
     resize: none;
-    overflow: hidden;
-    font-family: 'Courier New', Courier, monospace;
-    color:black;
+    overflow-y: auto;
+    font-family: 'Menlo', Courier, monospace;
+    color: black;
   }
 
   .editor-textarea::placeholder {
     color: #ccc;
-  }
-
-  .emoji-display {
-    font-size: 2rem;
-    cursor: pointer;
   }
